# rewards

./: .gitignore  .prettierignore  .vercelignore  Cargo.toml  README.md  SECURITY.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/setup/: action.yml
.github/workflows/: benchmark.yml  coverage.yml  deploy-devnet.yml  format.yml  idl-check.yml  publish-rust.yml  publish-typescript.yml  release.yml  security.yml  stale.yml  test.yml  web-ci.yml  web.yml
apps/web/: .env.local.example  index.html  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.ts
apps/web/e2e/: global-setup.ts  rewards-ui.spec.ts
apps/web/src/: App.tsx  index.css  main.tsx
audits/: AUDIT_STATUS.md
clients/rust/: Cargo.toml
clients/rust/src/: builder_extensions.rs  confidential_helpers.rs  lib.rs
clients/typescript/: package.json
clients/typescript/src/: helpers.ts
docs/: CU_BENCHMARKS.md
idl/: rewards_program.json
program/: Cargo.toml
program/src/: entrypoint.rs  errors.rs  lib.rs
program/src/events/: balance_synced.rs  claim_closed.rs  claimed.rs  distribution_closed.rs  distribution_created.rs  merkle_root_set.rs  mod.rs  opt_in.rs  opt_out.rs  points_account_closed.rs  points_config_closed.rs  points_config_created.rs  points_issued.rs  points_revoked.rs  points_transferred.rs  points_used.rs  recipient_added.rs  recipient_revoked.rs  reward_distributed.rs
program/src/instructions/: definition.rs  impl_instructions.rs  mod.rs
program/src/state/: direct_distribution.rs  direct_distribution_closed.rs  (+10 more)
scripts/: generate-clients.ts  generate-ts-client.ts
scripts/lib/: utils.ts
tests/integration-tests/: Cargo.toml  cu_baseline.md
tests/integration-tests/src/: lib.rs  test_add_direct_recipient.rs  test_claim_continuous_merkle.rs  test_claim_direct.rs  test_claim_merkle.rs  test_close_direct_distribution.rs  test_close_direct_recipient.rs  test_close_merkle_distribution.rs  test_close_points_account.rs  test_close_points_config.rs  test_confidential_continuous.rs  test_continuous_lifecycle.rs  test_create_direct_distribution.rs  test_create_merkle_distribution.rs  test_distribute_reward.rs  test_init_points.rs  test_issue_points.rs  test_opt_out.rs  test_points_lifecycle.rs  test_points_nontransferable.rs  test_revoke_merkle_claim.rs  test_revoke_points.rs  test_revoke_user.rs  test_set_balance.rs  test_set_continuous_merkle_root.rs  test_transfer_points.rs  test_use_points.rs  test_zk_elgamal_probe.rs
tests/integration-tests/src/fixtures/: claim_direct.rs  close_direct_distribution.rs  close_direct_recipient.rs  close_points_account.rs  close_points_config.rs  confidential.rs  continuous.rs  create_direct_distribution.rs  create_merkle_distribution.rs  init_points.rs  issue_points.rs  mod.rs  revoke_merkle_claim.rs  revoke_points.rs  transfer_points.rs  use_points.rs
tests/integration-tests/src/utils/: account_utils.rs  assertions.rs  merkle_utils.rs  mod.rs  pda_utils.rs  setup.rs  token_utils.rs  traits.rs
(+179 files in other folders)
