[package]
name = "rewards"
version = "0.0.1"
edition = "2021"
description = "Rust client for the Rewards Solana program"
license = "MIT"
repository = "https://github.com/solana-program/rewards"
readme = "../../README.md"
include = ["Cargo.toml", "../../README.md", "src/**/*.rs"]

[dependencies]
borsh = { workspace = true, features = ["derive"] }
solana-account-info = "3.1.1"
solana-pubkey = { version = "4.2.0", features = ["borsh", "curve25519"] }
solana-address = "2.6.0"
solana-instruction = { version = "~3.2", features = ["borsh"] }
solana-cpi = "~3.1"
num-derive = { workspace = true }
num-traits = { workspace = true }

solana-rpc-client = { version = "3.1.8", optional = true }
solana-account = { version = "~3.2", optional = true }
solana-program-error = "3.0.1"
thiserror = { workspace = true }

[features]
default = []
fetch = ["solana-rpc-client", "solana-account"]

[package.metadata.cargo-machete]
ignored = ["num-traits"]
