[package]
name = "tests-rewards-program"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
rewards-program-client = { package = "rewards", path = "../../clients/rust", features = [
    "fetch",
], default-features = false }
solana-sdk = "3.0.0"
solana-program = "4.0.0"
solana-client = { version = "3.1", default-features = false }
solana-epoch-info = { version = "3.1", default-features = false }
solana-rpc-client = { version = "3.1", default-features = false }
solana-rpc-client-api = "3.1.8"
solana-account = "~3.4"
spl-token-interface = "2.0.0"
spl-associated-token-account = { version = "8.0.0", features = [
    "no-entrypoint",
] }
solana-system-interface = "3.2.0"
solana-address = "2.6.0"
spl-token-2022 = { version = "11.0.0", features = ["no-entrypoint"] }
crossbeam-channel = { version = "0.5.15", default-features = false }
hex = { version = "0.4", default-features = false }
serde_json = "1"
surfpool-core = { version = "=1.2.1", default-features = false }
surfpool-sdk = "=1.2.1"
surfpool-types = { version = "=1.2.1", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
