[package]
name = "tests-rewards-program"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
litesvm = "^0.12.0"
rewards-program-client = { package = "rewards", path = "../../clients/rust", features = [
    "fetch",
], default-features = false }
solana-sdk = "3.0.0"
solana-program = "4.0.0"
solana-account = "~3.4"
spl-token-interface = "3.0.0"
spl-associated-token-account = { version = "8.0.0", features = [
    "no-entrypoint",
] }
solana-system-interface = "3.2.0"
solana-address = "2.6.0"
spl-token-2022 = { version = "11.0.0", features = ["no-entrypoint"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
